Fixed title on mobile

--- a/src/app/main.module/main.component/main-nav.component/main-nav.component.mobile.less
+++ b/src/app/main.module/main.component/main-nav.component/main-nav.component.mobile.less
@@ -13,10 +13,13 @@
             #header-title-mobile {
                 display: inline-block;
                 position: absolute;
-                top: 10px;
+                top: 5px;
                 left: 20px;
-                font-size: 1.8em;
-                color: white;
+                margin-right: 50px;
+
+                h1 {
+                    color: @color-text-secondary;
+                }
             }
 
             #main-nav-menu-button { 
